--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "bootstrap": "4.1.1",
+    "bootswatch": "^5.0.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^6.2.0",
-    "rxjs": "~6.3.3",
+    "ngx-bootstrap": "^5.6.2",
+    "ngx-toastr": "^10.1.0",
+    "rxjs": "~6.6.7",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
