--- a/client/client/package.json
+++ b/client/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
