--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings" :{
-    "DefaultConnection":"Data source= datingapp.db"
+    "DefaultConnection":"Data source=datingApp.db"
   },
   "TokenKey": "super secret unguessable key",
   "Logging": {
