--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^11.0.1",
+    "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.0.0",
     "popper.js": "^1.16.1",
     "recordrtc": "^5.6.2",
