--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@microsoft/signalr": "^5.0.7",
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
